--- a/about.css
+++ b/about.css
@@ -1,105 +1,158 @@
 @media only screen and (max-width: 600px) {
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
 
-    header{
-        position: fixed;
-        top:0;
-        left:0;
-    }
+  .burgerOff {
+    display: none;
+  }
 
-main{
+  .burger-menu div {
+    background-color: rgb(248, 246, 246);
+    margin-bottom: 1em;
+    width: 100%;
+    height: 4px;
+  }
+
+  .burger-menu div:last-child {
+    margin: 0;
+  }
+
+  .burgerList {
+    display: none;
+    color: white;
+  }
+
+  /*Wenn der Burger Knopf gedrückt wird*/
+
+  #burgerOn:target .burgerList {
+    display: list-item;
+    width: 100%;
+
+    background-color: rgb(248, 246, 246, 0.9);
+    border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 400px;
+    align-items: center;
+    list-style: none;
+    z-index: 1;
+    text-transform: capitalize;
+    font-size: larger;
+    font-weight: bold;
+    color: #3e3e3e;
+  }
+  
+  a {
+    text-decoration: none;
+    color: #484a4a;
+  }
+  #burgerOn:target .burgerOff {
+    display: block;
+  }
+
+  #burgerOn:target .burgerBtn {
+    display: none;
+  }
+
+  #burgerOn:target {
+    flex-wrap: wrap;
+  }
+
+  nav {
+    display: none;
+  }
+  nav ul {
+    display: none;
+  }
+
+  main {
     padding-top: 120px;
     background-color: #919191;
-}
-    .container-about{
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-        margin: 30px;
-    }
+  }
+  .container-about {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    margin: 30px;
+  }
 
-img{
+  img {
     width: 100%;
     border-radius: 30px;
-}
+  }
 
-.img1, .img2{
-   
+  .img1,
+  .img2 {
     background-size: cover;
-     background-repeat:no-repeat ;
-     background-image: center;
-     border: 5px solid rgba(38, 40, 42, 0.82);
-     border-radius: 30px;
-     box-shadow: 5px 5px 15px 5px #919191;
-    
- }
-    .info{
-        display: flex;
-        flex-direction:column;
-        justify-content: center;
-        align-items:center;
-        gap: 30px;
-        padding:30px;
-    }
-    p{
-        font-size:20px;
-        text-align: center;
-    }
-}
-
-
-
-
-
-
-
-@media screen and (min-width: 601px) {
-header{
-    position: fixed;
-    top:0;
-    left:0;
-}
-
-main{
-    padding-top: 120px;
-    background-color: #919191;
-}
-.img1, .img2{
-   
-   background-size: cover;
-    background-repeat:no-repeat ;
+    background-repeat: no-repeat;
     background-image: center;
     border: 5px solid rgba(38, 40, 42, 0.82);
     border-radius: 30px;
     box-shadow: 5px 5px 15px 5px #919191;
-   
+  }
+  .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    padding: 30px;
+  }
+  p {
+    font-size: 20px;
+    text-align: center;
+  }
 }
-.img1{
+
+@media screen and (min-width: 601px) {
+  header {
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+
+  main {
+    padding-top: 120px;
+    background-color: #919191;
+  }
+  .img1,
+  .img2 {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: center;
+    border: 5px solid rgba(38, 40, 42, 0.82);
+    border-radius: 30px;
+    box-shadow: 5px 5px 15px 5px #919191;
+  }
+  .img1 {
     background-image: url(/images/Mhamdi\ Diplom.jpg);
-   
-}
-.img2{
+  }
+  .img2 {
     background-image: url(/images/Lebenslauf.jpg);
-   
-}
-img{
+  }
+  img {
     width: 100%;
     border-radius: 30px;
-}
-.container-about{
+  }
+  .container-about {
     display: flex;
     gap: 30px;
     margin: 30px;
-}
-.info{
+  }
+  .info {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     gap: 30px;
-    padding:30px;
-}
-p{
-    font-size:20px;
+    padding: 30px;
+  }
+  p {
+    font-size: 20px;
     text-align: center;
-}
+  }
 }
