--- a/style.css
+++ b/style.css
@@ -6,310 +6,350 @@
   margin: 0;
 }
 /*#################################MOBILE##############################*/
-@media only screen and (max-width: 600px) {
 
-  .burger-menu {
-    height: 6em;
-    width: 4em;
-    background: none;
-    border: none;
-    margin-top: 26px;
-    margin: left 10px;
-  }
+.burger-menu {
+  height: 6em;
+  width: 4em;
+  background: none;
+  border: none;
+  margin-top: 26px;
+  margin: left 10px;
+}
 
-  .burger-menu div {
-    background-color: rgb(248, 246, 246);
-    margin-bottom: 1em;
-    width: 100%;
-    height: 4px;
-  }
-
-  .burger-menu div:last-child {
-    margin: 0;
-  }
-  nav {
-    display: none;
-  }
-ul{
+.burgerOff {
   display: none;
 }
-  header {
-    width: 100%;
-    height: 100px;
-    background-color: rgb(41, 38, 39);
-    padding: 18px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .container {
-    width: 100%;
-    background-color: rgb(40, 36, 44);
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
 
-    align-items: center;
-   
-    height: 50vh;
-  }
-  h1 {
-    color: lightcoral;
-    font-size: 2em;
-    margin: 10px 0px 10px;
-  }
-  span {
-    color: #f9004d;
-  }
-  p {
-    font-size: 1.5em;
-    color: rgb(40, 36, 44);
-    margin: 10px 0px 10px;
-  }
-  a {
-    text-decoration: none;
-    color: black;
-  }
-
-  h3 {
-    color: white;
-    font-size: 1.5em;
-
-    margin: 10px 0px 10px;
-  }
-  h4 {
-    color: rgba(138, 74, 138, 0.8);
-    letter-spacing: 2px;
-    font-size: 2em;
-    margin: 10px 0px 10px;
-  }
-  .mailing form {
-    width: 100%;
-    margin-bottom: 0px;
-  }
-  .mailing form input:first-child {
-    display: inline-block;
-    width: 80%;
-    padding: 14px 260px 14px 15px;
-    border: 2px solid #f9004d;
-    outline: none;
-    border-radius: 30px;
-    font-size: 1em;
-    margin-bottom: 0px;
-    margin-left: 10%;
-  }
-  .mailing form input:last-child {
-    display: inline-block;
-    outline: none;
-    border: none;
-    width: 40%;
-    padding: 10px 30px;
-    border-radius: 30px;
-    background-color: #f9004d;
-    color: white;
-    box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
-
-    font-size: 1em;
-    margin-left: 30%;
-    margin-top: 40px;
-  }
-
-  .about {
-    width: 100%;
-    height: 100vh;
-    padding: 100px 0px;
-    background-color: #191919;
-  }
-  .about-text {
-    width: 100%;
-  }
-  .main {
-    width: 90%;
-    max-width: 95%;
-    height: 100vh;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-  .about-text h2 {
-    color: white;
-    font-size: 2em;
-    text-transform: capitalize;
-    margin-bottom: 20px;
-  }
-  .about-text h5 {
-    color: white;
-    letter-spacing: 2px;
-    font-size: 1.5em;
-    margin-bottom: 25px;
-    text-transform: capitalize;
-  }
-  .about-text p {
-    color: rgba(161, 143, 161, 0.8);
-    letter-spacing: 1px;
-
-    font-size: 2em;
-    margin: 45px;
-  }
-  button {
-    background-color: #f9004d;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    font-size: 2em;
-    width: 80%;
-    margin: 12%;
-    padding: 13px 20px;
-    border-radius: 30px;
-    transition: 0.4s;
-  }
-  .about img {
-    display: none;
-  }
-
-  .service {
-    background: #101010;
-    width: 100%;
-    height: 180vh;
-    padding: 50px 0px;
-  }
-  .title h2 {
-    color: white;
-    font-size: 2em;
-    width: 60%;
-    margin: 30px auto;
-    text-align: center;
-  }
-  .box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .card {
-    width: 90%;
-    padding: 20px 35px;
-    background: #191919;
-    border-radius: 20px;
-
-    margin-top: 2%;
-    position: relative;
-    overflow: hidden;
-    text-align: center;
-    justify-content: center;
-    font-size: 1em;
-  }
-  .card i {
-    font-size: 2em;
-    display: block;
-    text-align: center;
-    margin: 15px 0px;
-    color: #f9004d;
-  }
-  h5 {
-    color: white;
-    font-size: 1.5em;
-    margin-bottom: 15px;
-  }
-  .pra p {
-    color: rgba(226, 213, 226, 0.8);
-    font-size: 1.8em;
-
-    margin-bottom: 25px;
-  }
-  .card .button {
-    background-color: #f9004d;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 9px 18px;
-    border-radius: 30px;
-    transition: 0.4s;
-  }
-
-  .contact-me {
-    width: 100%;
-    height: 100px;
-    background: #191919;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    display: none;
-  }
-  .contact-me p {
-    color: white;
-    font-size: 1.5em;
-    font-weight: bold;
-    margin-bottom: 25px;
-    display: none;
-  }
-  .contact-me .button-two {
-    background-color: #f9004d;
-    color: white;
-    text-decoration: none;
-    border: 2px solid transparent;
-    font-weight: bold;
-    padding: 13px 20px;
-    border-radius: 30px;
-    transition: 0.4s;
-  }
-
-  footer {
-    position: relative;
-    width: 100%;
-    height: 150px;
-    background: #101010;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .social {
-    display: flex;
-  }
-  .social a {
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #f9004d;
-    border-radius: 50%;
-    margin: 22px 10px;
-    color: white;
-    text-decoration: none;
-    font-size: 20px;
-  }
-  footer p {
-    color: white;
-  }
+.burger-menu div {
+  background-color: rgb(248, 246, 246);
+  margin-bottom: 1em;
+  width: 100%;
+  height: 4px;
 }
-/*#########################DESKTOP###########################################*/
-@media screen and (min-width: 601px) {
 
-  header {
-    width: 100%;
-    height: 100px;
-    background-color: rgb(41, 38, 39);
-    padding: 18px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+.burger-menu div:last-child {
+  margin: 0;
+}
 
-  .logo {
-    color: white;
-    font-size: 35px;
-    letter-spacing: 1px;
-    cursor: pointer;
+.burgerList {
+  display: none;
+  color: white;
+}
+
+/*Wenn der Burger Knopf gedrückt wird*/
+
+#burgerOn:target .burgerList {
+  display: list-item;
+  width: 100%;
+  background-color: rgb(248, 246, 246, 0.9);
+  border-radius: 2px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 400px;
+  align-items: center;
+  list-style: none;
+  z-index: 1;
+  text-transform: capitalize;
+  font-size: larger;
+  font-weight: bold;
+  color: #101010;
+}
+
+#burgerOn:target .burgerOff {
+  display: block;
+}
+
+#burgerOn:target .burgerBtn {
+  display: none;
+}
+
+#burgerOn:target {
+  flex-wrap: wrap;
+}
+
+
+nav {
+  display: none;
+}
+
+header {
+  width: 100%;
+  height: 100px;
+  background-color: rgb(41, 38, 39);
+  padding: 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.container {
+  width: 100%;
+  background-color: rgb(40, 36, 44);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  align-items: center;
+
+  height: 50vh;
+}
+h1 {
+  color: lightcoral;
+  font-size: 2em;
+  margin: 10px 0px 10px;
+}
+span {
+  color: #f9004d;
+}
+p {
+  font-size: 1.5em;
+  color: rgb(40, 36, 44);
+  margin: 10px 0px 10px;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+
+h3 {
+  color: white;
+  font-size: 1.5em;
+
+  margin: 10px 0px 10px;
+}
+h4 {
+  color: rgba(138, 74, 138, 0.8);
+  letter-spacing: 2px;
+  font-size: 2em;
+  margin: 10px 0px 10px;
+}
+.mailing form {
+  width: 100%;
+  margin-bottom: 0px;
+}
+.mailing form input:first-child {
+  display: inline-block;
+  width: 80%;
+  padding: 14px 260px 14px 15px;
+  border: 2px solid #f9004d;
+  outline: none;
+  border-radius: 30px;
+  font-size: 1em;
+  margin-bottom: 0px;
+  margin-left: 10%;
+}
+.mailing form input:last-child {
+  display: inline-block;
+  outline: none;
+  border: none;
+  width: 40%;
+  padding: 10px 30px;
+  border-radius: 30px;
+  background-color: #f9004d;
+  color: white;
+  box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
+
+  font-size: 1em;
+  margin-left: 30%;
+  margin-top: 40px;
+}
+
+.about {
+  width: 100%;
+  height: max-content;
+  padding: 100px 0px;
+  background-color: #191919;
+}
+.about-text {
+  width: 100%;
+}
+.main {
+  width: 90%;
+  max-width: 95%;
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.about-text h2 {
+  color: white;
+  font-size: 2em;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+}
+.about-text h5 {
+  color: white;
+  letter-spacing: 2px;
+  font-size: 1.5em;
+  margin-bottom: 25px;
+  text-transform: capitalize;
+}
+.about-text p {
+  color: rgba(161, 143, 161, 0.8);
+  letter-spacing: 1px;
+
+  font-size: 2em;
+  margin: 45px;
+}
+button {
+  background-color: #f9004d;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  font-size: 2em;
+  width: 80%;
+  margin: 12%;
+  padding: 13px 20px;
+  border-radius: 30px;
+  transition: 0.4s;
+}
+.about img {
+  display: none;
+}
+
+.service {
+  background: #101010;
+  width: 100%;
+  height:max-content;
+  padding: 50px 0px;
+}
+.title h2 {
+  color: white;
+  font-size: 2em;
+  width: 60%;
+  margin: 30px auto;
+  text-align: center;
+}
+.box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  width: 90%;
+  padding: 20px 35px;
+  background: #191919;
+  border-radius: 20px;
+
+  margin-top: 2%;
+  position: relative;
+  overflow: hidden;
+  text-align: left;
+  justify-content: center;
+  font-size: 1em;
+}
+
+.card i {
+  font-size: 2em;
+  display: block;
+  text-align: center;
+  margin: 15px 0px;
+  color: #f9004d;
+}
+h5 {
+  color: white;
+  font-size: 1.5em;
+  margin-bottom: 15px;
+}
+.pra p,
+ul li {
+  color: rgba(226, 213, 226, 0.8);
+  font-size: 1.8em;
+
+  margin-bottom: 25px;
+}
+.card .button {
+  background-color: #f9004d;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 9px 18px;
+  border-radius: 30px;
+  transition: 0.4s;
+}
+
+.contact-me {
+  width: 100%;
+  height: 100px;
+  background: #191919;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  display: none;
+}
+.contact-me p {
+  color: white;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 25px;
+  display: none;
+}
+.contact-me .button-two {
+  background-color: #f9004d;
+  color: white;
+  text-decoration: none;
+  border: 2px solid transparent;
+  font-weight: bold;
+  padding: 13px 20px;
+  border-radius: 30px;
+  transition: 0.4s;
+}
+
+footer {
+  position: relative;
+  width: 100%;
+  height: 150px;
+  background: #101010;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.social {
+  display: flex;
+}
+.social a {
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f9004d;
+  border-radius: 50%;
+  margin: 22px 10px;
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+footer p {
+  color: white;
+}
+
+/*###############Tablet##########Tablet###################Tablet########################*/
+/*###############Tablet##########Tablet###################Tablet########################*/
+@media screen and (min-width: 768px) {
+  .box {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
   }
-  span {
-    color: #f9004d;
+  .burgerBtn,
+  .burger-menu {
+    display: none;
+  }
+  .burgerList {
+    display: none;
+  }
+  
+  nav {
+    display: contents;
   }
   nav ul li {
     list-style-type: none;
@@ -324,8 +364,83 @@ ul{
   }
   nav ul li a:hover {
     color: #df1052;
-  font-size: x-large;
+    
+   
   }
+
+
+}
+
+/*#########################DESKTOP###########################################*/
+@media screen and (min-width:  1143px) {
+  header {
+    width: 100%;
+    height: 100px;
+    background-color: rgb(41, 38, 39);
+    padding: 18px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .burgerBtn,
+  .burger-menu {
+    display: none;
+  }
+  .burgerList {
+    display: none;
+  }
+
+  .logo {
+    color: white;
+    font-size: 35px;
+    letter-spacing: 1px;
+    cursor: pointer;
+  }
+  span {
+    color: #f9004d;
+  }
+
+  @-webkit-keyframes shadow-pop-tr {
+    0% {
+      -webkit-box-shadow: 0 0 #7e7979, 0 0 #aba5a5, 0 0 #a39e9e, 0 0 #b1a7a7,
+        0 0 #cac1c1, 0 0 #aeacac, 0 0 #d9cfcf, 0 0 #3e3e3e;
+      box-shadow: 0 0 #d7d2d2, 0 0 #dcd4d4, 0 0 #ded5d5, 0 0 #ede5e5,
+        0 0 #bbb3b3, 0 0 #b7a3a3, 0 0 #ebdede, 0 0 #3e3e3e;
+      -webkit-transform: translateX(0) translateY(0);
+      transform: translateX(0) translateY(0);
+    }
+    100% {
+      -webkit-box-shadow: 1px -1px #3e3e3e, 2px -2px #3e3e3e, 3px -3px #3e3e3e,
+        4px -4px #3e3e3e, 5px -5px #3e3e3e, 6px -6px #3e3e3e, 7px -7px #3e3e3e,
+        8px -8px #3e3e3e;
+      box-shadow: 1px -1px #3e3e3e, 2px -2px #3e3e3e, 3px -3px #3e3e3e,
+        4px -4px #3e3e3e, 5px -5px #3e3e3e, 6px -6px #3e3e3e, 7px -7px #3e3e3e,
+        8px -8px #3e3e3e;
+      -webkit-transform: translateX(-8px) translateY(8px);
+      transform: translateX(-8px) translateY(8px);
+    }
+  }
+  @keyframes shadow-pop-tr {
+    0% {
+      -webkit-box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e,
+        0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
+      box-shadow: 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e,
+        0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e, 0 0 #3e3e3e;
+      -webkit-transform: translateX(0) translateY(0);
+      transform: translateX(0) translateY(0);
+    }
+    100% {
+      -webkit-box-shadow: 1px -1px #3e3e3e, 2px -2px #3e3e3e, 3px -3px #3e3e3e,
+        4px -4px #3e3e3e, 5px -5px #3e3e3e, 6px -6px #3e3e3e, 7px -7px #3e3e3e,
+        8px -8px #3e3e3e;
+      box-shadow: 1px -1px #3e3e3e, 2px -2px #3e3e3e, 3px -3px #3e3e3e,
+        4px -4px #3e3e3e, 5px -5px #3e3e3e, 6px -6px #3e3e3e, 7px -7px #3e3e3e,
+        8px -8px #3e3e3e;
+      -webkit-transform: translateX(-8px) translateY(8px);
+      transform: translateX(-8px) translateY(8px);
+    }
+  }
+
   .btn {
     background-color: #f9004d;
     color: white;
@@ -334,15 +449,14 @@ ul{
     font-weight: bold;
     padding: 10px 25px;
     border-radius: 30px;
-  
   }
   .btn:hover {
     transform: scale(1.2);
   }
-  .container{
-    height:80vh;
-		width:100%;
-		background-color: rgb(41, 38, 39);
+  .container {
+    height: 80vh;
+    width: 100%;
+    background-color: rgb(41, 38, 39);
     display: flex;
     flex-direction: column;
   }
@@ -382,10 +496,8 @@ ul{
     border: 2px solid #f9004d;
     outline: none;
     border-radius: 30px;
-   
   }
   .mailing form input:last-child {
- 
     display: inline-block;
     outline: none;
     border: none;
@@ -395,9 +507,10 @@ ul{
     color: white;
     box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
     position: absolute;
-    top: 15%;
-    left: 67%;}
-  
+    top: -35px;
+    left: 150px;
+  }
+
   .about {
     width: 100%;
     padding: 100px 0px;
@@ -413,7 +526,6 @@ ul{
     width: 550px;
   }
   .main {
-    width: 1130px;
     max-width: 95%;
     margin: 0 auto;
     display: flex;
@@ -448,18 +560,19 @@ ul{
     font-weight: bold;
     padding: 13px 30px;
     border-radius: 30px;
-  
   }
   button:hover {
     background-color: transparent;
     border: 2px solid #f9004d;
     cursor: pointer;
   }
-  
+
   .service {
     background: #101010;
     width: 100%;
+    height: max-content;
     padding: 100px 0px;
+    
   }
   .title h2 {
     color: white;
@@ -470,38 +583,41 @@ ul{
   }
   .box {
     display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     justify-content: center;
-    align-items: center;
-    min-height: 400px;
   }
+
   .card {
-height: 800px;
-    width: 335px;
-    padding: 20px 35px;
+    width: 25%;
+   height: 800px;
     background: #191919;
     border-radius: 20px;
     margin: 15px;
     position: relative;
-    overflow: hidden;
-    text-align: center;
+
+   text-align: left;
   }
+
   .card i {
     font-size: 50px;
     display: block;
     text-align: center;
-    margin: 25px 0px;
+    margin: 20px 0px;
     color: #f9004d;
   }
   h5 {
     color: white;
     font-size: 23px;
     margin-bottom: 15px;
+    text-align: center;
   }
-  .pra p, .pra ul li {
+  .pra p,
+  .pra ul li {
     color: rgba(237, 229, 237, 0.8);
     font-size: 18px;
     line-height: 27px;
-    margin-bottom: 25px;
+    margin: 25px;
   }
   .card .button {
     background-color: #f9004d;
@@ -511,14 +627,22 @@ height: 800px;
     font-weight: bold;
     padding: 9px 22px;
     border-radius: 30px;
-   position: absolute;
-   bottom: 15px;
-   left: 30%;
+    position: absolute;
+    bottom: 15px;
+    text-align: center;
+    left: 30%;
   }
   .card .button:hover {
     background-color: transparent;
     border: 2px solid #f9004d;
     cursor: pointer;
+    color: #bbb3b3;
+  }
+  .lets:hover{
+     background-color: rgba(138, 74, 138, 0.8);
+    border: 2px solid #f9004d;
+    cursor: pointer;
+    color: #d921ca;
   }
   .contact-me {
     width: 100%;
@@ -553,7 +677,7 @@ height: 800px;
   footer {
     position: relative;
     width: 100%;
-   
+
     background: #101010;
     display: flex;
     flex-direction: column;
@@ -591,7 +715,5 @@ height: 800px;
   }
   .social a:hover {
     transform: scale(1.3);
-   
   }
 }
-  
