--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@
 #burgerOn:target .burgerList {
   display: list-item;
   width: 100%;
-  background-color: rgb(248, 246, 246, 0.9);
-  border-radius: 2px;
+  background: linear-gradient(to right, #c8bebe, #9a4444);
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -67,7 +67,6 @@
 #burgerOn:target {
   flex-wrap: wrap;
 }
-
 
 nav {
   display: none;
@@ -110,7 +109,10 @@ a {
   text-decoration: none;
   color: black;
 }
-
+a:hover {
+  text-decoration: none;
+  color: lightcoral;
+}
 h3 {
   color: white;
   font-size: 1.5em;
@@ -156,7 +158,7 @@ h4 {
 
 .about {
   width: 100%;
-  height: max-content;
+  height: min-content;
   padding: 100px 0px;
   background-color: #191919;
 }
@@ -166,7 +168,7 @@ h4 {
 .main {
   width: 90%;
   max-width: 95%;
-  height: 100vh;
+  height: fit-content;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -190,7 +192,7 @@ h4 {
   letter-spacing: 1px;
 
   font-size: 2em;
-  margin: 45px;
+  margin-top: 45px;
 }
 button {
   background-color: #f9004d;
@@ -212,7 +214,7 @@ button {
 .service {
   background: #101010;
   width: 100%;
-  height:max-content;
+  height: max-content;
   padding: 50px 0px;
 }
 .title h2 {
@@ -222,24 +224,80 @@ button {
   margin: 30px auto;
   text-align: center;
 }
+h2 span {
+  animation: color 2s infinite;
+}
+
+@keyframes color {
+  0% {
+    text-shadow: none;
+    color: #484848;
+  }
+
+  90% {
+    text-shadow: none;
+    color: #484848;
+  }
+
+  100% {
+    text-shadow: 0 0 10px rgb(210, 35, 35), 0 0 20px rgb(250, 12, 20);
+    color: rgb(186, 47, 144);
+  }
+}
+
+h2 span:nth-child(1) {
+  animation-delay: 0;
+}
+h2 span:nth-child(2) {
+  animation-delay: 0.1s;
+}
+h2 span:nth-child(3) {
+  animation-delay: 0.3s;
+}
+h2 span:nth-child(4) {
+  animation-delay: 0.4s;
+}
+h2 span:nth-child(5) {
+  animation-delay: 0.5s;
+}
+
+h2 span:nth-child(6) {
+  animation-delay: 0.6s;
+}
+h2 span:nth-child(7) {
+  animation-delay: 0.7s;
+}
+h2 span:nth-child(8) {
+  animation-delay: 0.9s;
+}
+h2 span:nth-child(9) {
+  animation-delay: 1s;
+}
+h2 span:nth-child(10) {
+  animation-delay: 1.1s;
+}
+h2 span:nth-child(11) {
+  animation-delay: 1.2s;
+}
 .box {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-left: 100px;
 }
 
 .card {
-  width: 90%;
+  width: 360px;
+  height: fit-content;
   padding: 20px 35px;
-  background: #191919;
+  background: #2c2525;
   border-radius: 20px;
-
   margin-top: 2%;
   position: relative;
   overflow: hidden;
-  text-align: left;
-  justify-content: center;
+  /* text-align: left; */
+  /* justify-content: center; */
   font-size: 1em;
 }
 
@@ -254,13 +312,15 @@ h5 {
   color: white;
   font-size: 1.5em;
   margin-bottom: 15px;
+  text-align: center;
 }
 .pra p,
 ul li {
   color: rgba(226, 213, 226, 0.8);
-  font-size: 1.8em;
-
+  font-size: 18px;
+line-height: 27px;
   margin-bottom: 25px;
+  padding-bottom: 10px;
 }
 .card .button {
   background-color: #f9004d;
@@ -271,34 +331,10 @@ ul li {
   padding: 9px 18px;
   border-radius: 30px;
   transition: 0.4s;
-}
-
-.contact-me {
-  width: 100%;
-  height: 100px;
-  background: #191919;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  display: none;
-}
-.contact-me p {
-  color: white;
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-bottom: 25px;
-  display: none;
-}
-.contact-me .button-two {
-  background-color: #f9004d;
-  color: white;
-  text-decoration: none;
-  border: 2px solid transparent;
-  font-weight: bold;
-  padding: 13px 20px;
-  border-radius: 30px;
-  transition: 0.4s;
+  text-align: center;
+  position: absolute;
+  bottom: 30px;
+  left: 31%;
 }
 
 footer {
@@ -347,7 +383,7 @@ footer p {
   .burgerList {
     display: none;
   }
-  
+
   nav {
     display: contents;
   }
@@ -364,15 +400,16 @@ footer p {
   }
   nav ul li a:hover {
     color: #df1052;
-    
-   
   }
-
-
+  .card {
+    width: 384px;
+    height: 600px;
+    font-size: 14px;
+  }
 }
 
 /*#########################DESKTOP###########################################*/
-@media screen and (min-width:  1143px) {
+@media screen and (min-width: 1200px) {
   header {
     width: 100%;
     height: 100px;
@@ -572,7 +609,6 @@ footer p {
     width: 100%;
     height: max-content;
     padding: 100px 0px;
-    
   }
   .title h2 {
     color: white;
@@ -584,19 +620,65 @@ footer p {
   .box {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
   }
 
   .card {
-    width: 25%;
-   height: 800px;
-    background: #191919;
+    width: 400px;
+    height: 700px;
+    padding: 20px 35px;
+    background: #2c2525;
     border-radius: 20px;
-    margin: 15px;
+    margin-top: 2%;
     position: relative;
+    overflow: hidden;
+    /* text-align: left; */
+    /* justify-content: center; */
+    font-size: 14px;
+  }
 
-   text-align: left;
+  .card i {
+    font-size: 18px;
+    display: block;
+    text-align: center;
+    margin: 15px 0px;
+    color: #f9004d;
+  }
+  h5 {
+    color: white;
+    font-size: 16px;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  .pra p,
+  ul li {
+    color: rgba(226, 213, 226, 0.8);
+    font-size: 14px;
+
+    margin-bottom: 25px;
+  }
+  .card .button {
+    background-color: #f9004d;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 9px 18px;
+    border-radius: 30px;
+    transition: 0.4s;
+    text-align: center;
+    position: absolute;
+    bottom: 30px;
+    left: 31%;
+   
+  }
+
+  .card:hover {
+    transform: scale(1.1);
+    background: linear-gradient(
+      to right,
+      rgba(151, 87, 87, 0.5),
+      rgba(255, 255, 255, 0.6)
+    );
   }
 
   .card i {
@@ -638,42 +720,25 @@ footer p {
     cursor: pointer;
     color: #bbb3b3;
   }
-  .lets:hover{
-     background-color: rgba(138, 74, 138, 0.8);
+  .lets:hover {
+    background-color: rgba(220, 218, 220, 0.8);
     border: 2px solid #f9004d;
     cursor: pointer;
     color: #d921ca;
   }
-  .contact-me {
-    width: 100%;
-    height: 290px;
-    background: #191919;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .contact-me p {
-    color: white;
-    font-size: 30px;
-    font-weight: bold;
-    margin-bottom: 25px;
-  }
-  .contact-me .button-two {
+
+  .lets {
     background-color: #f9004d;
     color: white;
     text-decoration: none;
     border: 2px solid transparent;
     font-weight: bold;
-    padding: 13px 30px;
+    padding: 25px 90px;
     border-radius: 30px;
     transition: 0.4s;
+    margin-left: 150px;
   }
-  .contact-me .button-two:hover {
-    background-color: transparent;
-    border: 2px solid #f9004d;
-    cursor: pointer;
-  }
+
   footer {
     position: relative;
     width: 100%;
